@@ -5,7 +5,8 @@ require './virtual-server-lib.pl';
 &can_edit_templates() || &error($text{'newscripts_ecannot'});
 &ReadParse();
 
-&save_script_master_permissions($in{'allowmaster'}, $in{'allowvers'});
+&save_script_master_permissions($in{'allowmaster'}, $in{'allowvers'},
+				$in{'denydefault'});
 &webmin_log("allow", "scripts");
 &redirect("edit_newscripts.cgi?mode=enable");
 
