@@ -1053,3 +1053,4 @@ Moved the field for setting the external IP address (typically for use in DNS re
 Moved the --dns-ip and --no-dns-ip options from the modify-dns.pl API script to modify-domain.pl and create-domain.pl.
 The default TTL for DNS domains (set using the $ttl line in the zone file) can now be configured in server templates.
 Added commands to be run before and after scheduled backups, settable on the Edit Scheduled Backup page.
+Added an option to the Script Installers page to deny access to new script types by default.
